<resources>
    <string name="app_name">SEOmate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fix_seo_errors">Fix SEO Errors</string>
    <string name="check_and_fix_errors_using_ai">Check and Fix Errors using AI</string>
    <string name="fix">FIX</string>
    <string name="enter_website_url">Enter website URL</string>
    <string name="check_errors">Check Errors</string>
    <string name="generate_report">Generate Report</string>
    <string name="generate_seo_report">Generate SEO Report</string>
    <string name="download_or_preview_report">Download or Preview your website report</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>

</resources>